k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-cart-srtknk
  labels:
    name: shopping-cart-srtknk
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: shopping-cart-srtknk
  template:
    metadata:
      labels:
        component: shopping-cart-srtknk
    spec:
      containers:
        - name: shopping-cart-srtknk
          image: anhiuem492/server-srtknk:shopping-cart
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 64Mi
            requests:
              cpu: 20m
              memory: 64Mi
