k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart-srtknk
  labels:
    name: shopping-cart-srtknk
spec:
  type: ClusterIP
  selector:
    component: shopping-cart-srtknk
  ports:
    - port: 80
      targetPort: 80
