k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shopping-cart-srtknk
  labels:
    name: shopping-cart-srtknk
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: shopping-cart-srtknk.cxnam.ews.en.internal
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: shopping-cart-srtknk
              servicePort: 80
